--- a/admin-cli/package.json
+++ b/admin-cli/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "axios": "^1.13.2",
     "chalk": "^5.6.2",
