--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,24 +1,12 @@
-# Logs
-logs
-*.log
+node_modules
+.pnp
+.pnp.js
+coverage
+build
+dist
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+.docker
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
